--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <body>
     <h1>Edward Luhn's Github Page</h1>
     <p>
-    Eventually this page might become something.  Meanwhile, enjoy this picture.
+    Eventually this page might become something.  Meanwhile, pretend that Annie
+     Clark wants you.
     </p>
-    <img src="./resources/jennlyons1.jpg" width="468" height="702"/>
+    <img src="./resources/AnnieFlirt.gif"
+         alt="gif of Annie Clark flirting"
+    />
   </body>
 </html>
